--- a/Basic Website/index.html
+++ b/Basic Website/index.html
@@ -18,5 +18,11 @@
         <button id="images-btn">Images</button>
         <button id="other-files-btn">Other Files</button>
     </div>
+    <script>
+        const imageBtn = document.querySelector("#images-btn")
+        const otherFilesBtn = document.querySelector("#other-files-btn")
+        console.log(imageBtn)
+        console.log(otherFilesBtn)
+    </script>
 </body>
 </html>
