--- a/Basic Website/index.html
+++ b/Basic Website/index.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shukla Sir's Zoology World!</title>
     <style>
-        button::before{
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+        button::before {
             content: "View: ";
+        }
+
+        body {
+            height: fit-content;
+            width: fit-content;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            background-color: burlywood;
+            text-align: center;
+            font-size: 20px !important;
+            font-family: 'Montserrat', sans-serif
+        }
+
+        button {
+            width: 100%;
+            height: 100%;
+            background-color: cornflowerblue;
+            border: white 5px solid;
+            border-radius: 5px;
+            color: rgb(0, 0, 0);
+            margin-bottom: 3px;
+            font-size: 15px !important;
+            padding: 5px;
+            transition: all 0.3s;
+        }
+        button:hover{
+            background-color: #fff;
+            border-color: cornflowerblue;
         }
     </style>
 </head>
+
 <body>
     <div id="main-content">
         <h2>Shukla Sir's Zoology World!</h2>
@@ -25,4 +61,5 @@
         console.log(otherFilesBtn)
     </script>
 </body>
+
 </html>
