--- a/Basic Website/index.html
+++ b/Basic Website/index.html
@@ -25,7 +25,7 @@
             background-color: burlywood;
             text-align: center;
             font-size: 20px !important;
-            font-family: 'Montserrat', sans-serif
+            font-family: 'Montserrat', sans-serif;
         }
 
         button {
@@ -39,6 +39,7 @@
             font-size: 15px !important;
             padding: 5px;
             transition: all 0.3s;
+            font-family: 'Montserrat', sans-serif;
         }
         button:hover{
             background-color: #fff;
